welcome.lessons.welcome.bat.bool2.CigarParty.scala.code
def cigarParty(cigars:Int, isWeekend:Boolean):Boolean = {
  if ((isWeekend==true)&&(cigars>=40)){
    return true
  }else if((isWeekend==false)&&(cigarParty>=40 && cigars<=60)){
    return true
  }else{
    return false
  }
  }